註冊頁面更新

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,53 +1,60 @@
+<div class="text-center pt-5">
+  <h1 class="text-3xl font-bold text-maingray">註冊</h1>
+</div>
 
-<h1 class="py-10 font-mono text-5xl font-bold text-center">註冊</h1>
+<section class="flex flex-col md:flex-row w-full items-center">
+  <div class="bg-white max-h-screen p-4 w-full h-full md:w-1/3 mx-auto md:px-8 rounded-md">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="mb-12">
+        <div class="bg-gray-300 rounded-md">
+          <%= f.label :"暱稱" ,class:"block text-md font-bold text-maingray px-2 py-1" %>
+          <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入暱稱"%>
+        </div>
 
-<section class="max-w-xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-<div class="h-4 bg-green-400 rounded-t-md w-full"></div>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <div class=" p-6 grid grid-cols-1 gap-6 mt-4 sm:grid-cols-1">
-      <div class="field">
-        <%= f.label :"暱稱" ,class:"text-block dark:text-gray-200" %><br />
-        <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <%= f.label :"電子信箱", class:"block text-md font-bold text-maingray px-2 py-1" %>
+          <%= f.email_field :email, autofocus: true,autocomplete: "email", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入電子信箱"%>
+        </div>
+        
+
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="flex ">
+            <%= f.label :"密碼" ,class:"block text-md font-bold text-maingray px-2 py-1"%>
+            <% if @minimum_password_length %>
+            <div class="text-md font-bold text-maingray py-1">(請至少輸入<%= @minimum_password_length %> 位數密碼)</div>
+            <% end %>
+          </div>
+
+          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入密碼" %>
+        </div>
+
+        <div class="my-3 bg-gray-300 rounded-md">
+          <%= f.label :"在輸入一次密碼" ,class:"block text-md font-bold text-maingray px-2 py-1"%>
+          <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請再輸入一次密碼"%>
+        </div>
+        
+        <div class="my-3 py-2 bg-gray-300 rounded-md flex justify-center">
+          <div class="mx-4">
+            <%= f.radio_button :role, "user" , class:"w-5 h-5 align-text-bottom" %>
+            <%= f.label :"消費者" ,class:"text-block dark:text-gray-200 mx-2" %>
+          </div>
+          <div class="mx-4">
+            <%= f.radio_button :role, "vender" ,class:"w-5 h-5 align-text-bottom"%>
+            <%= f.label :"店家" ,class:"text-block dark:text-gray-200 mx-2" %>
+          </div>
+        </div>
       </div>
 
-      <div class="field">
-        <%= f.label :"電子信箱", class:"text-block dark:text-gray-200" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
-      </div>
-      
-
-      <div class="field">
-        <%= f.label :"密碼" ,class:"text-block dark:text-gray-200" %>
-        <% if @minimum_password_length %>
-        <p class="inline-block">(請至少輸入<%= @minimum_password_length %> 位數密碼)</p>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring" %>
+      <div class="flex justify-end">
+          <%= link_to "返回", :back ,class:"text-center mt-2 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200" %>
+          <%= f.submit '註冊' , class:"mt-2 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500"%>
       </div>
 
-      <div class="field">
-        <%= f.label :"在輸入一次密碼" ,class:"text-block dark:text-gray-200" %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+      <div class="flex justify-center mt-6">
+        <%= render "devise/shared/links" %>
       </div>
-      
-      <div class="field flex align-center justify-center">
-        <%= f.radio_button :role, "user" , class:"w-5 h-5 text-blue-600 bg-gray-100  border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" %>
-        <%= f.label :"消費者" ,class:"text-block dark:text-gray-200 mx-4" %><br />
 
-        <%= f.radio_button :role, "vender" ,class:"w-5 h-5 text-blue-600 bg-gray-100  border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"%>
-        <%= f.label :"店家" ,class:"text-block dark:text-gray-200 mx-4" %><br />
-      </div>
-    </div>
-
-    <div class="flex justify-center mt-6">
-      <%= link_to "Back", :back ,class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105" %>
-
-      <%= f.submit 'Sign up' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105 "%>
-    </div>
-
-    <div class="flex justify-center mt-6">
-      <%= render "devise/shared/links" %>
-    </div>
-
-  <% end %>
+    <% end %>
+  </div>
 </section>
