--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,34 +1,33 @@
-<h1 class="py-10 font-mono text-5xl font-bold text-center">Forgot your password?</h1>
+<div class="text-center pt-5">
+  <h1 class="text-3xl font-bold text-maingray">忘記您的密碼了嗎？</h1>
+</div>
 
-<section class="max-w-xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-<div class="h-4 bg-green-400 rounded-t-md w-full"></div>
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-    <div class=" p-6 grid grid-cols-1 gap-6 mt-4 sm:grid-cols-1">
-
-      <div class="field">
-        <%= f.label :email, class:"text-block dark:text-gray-200" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+<section class="flex flex-col md:flex-row w-full items-center">
+  <div class="bg-white max-h-screen p-8 w-full h-full md:w-1/3 mx-auto md:px-8 rounded-md">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="mb-12">
+        <div class="bg-gray-300 rounded-md">
+          <%= f.label :'電子信箱', class:"block text-md font-bold text-maingray px-2 py-1"%>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入電子信箱"%>
+        </div>
+        
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+        </div>
+        <% end %>
       </div>
-      
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+
+      <div class="flex justify-end">
+        <%= link_to "返回", root_path ,class:"text-center mt-2 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200" %>
+
+        <%= f.submit "變更密碼" , class:"mt-2 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500"%>
       </div>
-      <% end %>
-    </div>
 
-    <div class="flex justify-center mt-6">
-      <%= link_to "Back", root_path ,class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105" %>
+      <div class="flex justify-center mt-6">
+        <%= render "devise/shared/links" %>
+      </div>
 
-      <%= f.submit 'Update' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105 "%>
-    </div>
-
-    <div class="flex justify-center mt-6">
-      <%= render "devise/shared/links" %>
-    </div>
-
-    <div class="actions flex font-bold justify-center mt-3 font-mono">
-      <%= f.submit "Reset password" %>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </section>
