--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-    <%= render "shared/navbar" %>
+    <% if current_user %>
+      <%= render "shared/navbar" %>
+    <% end %>
     <%= render 'shared/flash' %>
     <%= yield %>
       
