--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,60 +1,63 @@
-<div class="text-center pt-5">
-  <h1 class="text-3xl font-bold text-maingray">註冊</h1>
-</div>
-
-<section class="flex flex-col md:flex-row w-full items-center">
-  <div class="bg-white max-h-screen p-4 w-full h-full md:w-1/3 mx-auto md:px-8 rounded-md">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-      <div class="mb-12">
-        <div class="bg-gray-300 rounded-md">
-          <%= f.label :"暱稱" ,class:"block text-md font-bold text-maingray px-2 py-1" %>
-          <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入暱稱"%>
-        </div>
-
-        <div class="my-3 bg-gray-300 rounded-md">
-          <%= f.label :"電子信箱", class:"block text-md font-bold text-maingray px-2 py-1" %>
-          <%= f.email_field :email, autofocus: true,autocomplete: "email", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入電子信箱"%>
-        </div>
-        
-
-        <div class="my-3 bg-gray-300 rounded-md">
-          <div class="flex ">
-            <%= f.label :"密碼" ,class:"block text-md font-bold text-maingray px-2 py-1"%>
-            <% if @minimum_password_length %>
-            <div class="text-md font-bold text-maingray py-1">(請至少輸入<%= @minimum_password_length %> 位數密碼)</div>
-            <% end %>
-          </div>
-
-          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入密碼" %>
-        </div>
-
-        <div class="my-3 bg-gray-300 rounded-md">
-          <%= f.label :"在輸入一次密碼" ,class:"block text-md font-bold text-maingray px-2 py-1"%>
-          <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請再輸入一次密碼"%>
-        </div>
-        
-        <div class="my-3 py-2 bg-gray-300 rounded-md flex justify-center">
-          <div class="mx-4">
-            <%= f.radio_button :role, "user" , class:"w-5 h-5 align-text-bottom" %>
-            <%= f.label :"消費者" ,class:"text-block dark:text-gray-200 mx-2" %>
-          </div>
-          <div class="mx-4">
-            <%= f.radio_button :role, "vender" ,class:"w-5 h-5 align-text-bottom"%>
-            <%= f.label :"店家" ,class:"text-block dark:text-gray-200 mx-2" %>
-          </div>
-        </div>
-      </div>
-
-      <div class="flex justify-end">
-          <%= link_to "返回", :back ,class:"text-center mt-2 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200" %>
-          <%= f.submit '註冊' , class:"mt-2 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500"%>
-      </div>
-
-      <div class="flex justify-center mt-6">
-        <%= render "devise/shared/links" %>
-      </div>
-
-    <% end %>
+<div class="w-full min-h-screen flex px-10 bg-maingray">
+  <div class="hidden md:flex w-full h-full my-auto rounded-xl  overflow-hidden">
+    <img src="/photo/wechef-low-resolution-color-logo_1.png" alt="" class="w-full">
   </div>
-</section>
+
+  
+  <section  class="flex flex-col md:flex-row w-full items-center">
+    <img src="/photo/wechef-low-resolution-color-logo_1.png" alt="" class="w-full md:hidden">
+    <div class="bg-white max-h-screen p-4 w-full md:w-2/3 mx-auto md:p-12 rounded-md">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <div>
+          <h1 class="text-2xl font-bold">註冊</h1>
+        </div>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="mb-6">
+
+          <div class="mt-5">
+            <%= f.label :"暱稱" ,class:"block text-md mb-2" %>
+            <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange " ,placeholder:"請輸入暱稱"%>
+          </div>
+  
+          <div class="my-3">
+            <%= f.label :"電子信箱", class:"block text-md mb-2"%>
+            <%= f.email_field :email, autofocus: true,autocomplete: "email", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange " ,placeholder:"請輸入電子信箱"%>
+          </div>
+  
+  
+          <div class="my-3">
+            <div class="flex ">
+              <%= f.label :"密碼" ,class:"block text-md mb-2"%>
+              <% if @minimum_password_length %>
+              <div class="px-2"> (請至少輸入<%= @minimum_password_length %> 位數密碼)</div>
+              <% end %>
+            </div>
+  
+            <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange " ,placeholder:"請輸入密碼" %>
+          </div>
+  
+          <div class="my-3">
+            <%= f.label :"在輸入一次密碼" ,class:"block text-md mb-2"%>
+            <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange ",placeholder:"請再輸入一次密碼"%>
+          </div>
+  
+          <div class="my-3 py-2 rounded-md flex justify-center">
+            <div class="mx-4">
+              <%= f.radio_button :role, "user" , class:"w-5 h-5 align-text-bottom" %>
+              <%= f.label :"消費者" ,class:"text-block dark:text-gray-200 mx-2" %>
+            </div>
+            <div class="mx-4">
+              <%= f.radio_button :role, "vender" ,class:"w-5 h-5 align-text-bottom"%>
+              <%= f.label :"店家" ,class:"text-block dark:text-gray-200 mx-2" %>
+            </div>
+          </div>
+        </div>
+  
+        <div class="">
+            <%= f.submit '註冊' , class:"mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500"%>
+            <%= link_to "返回", :back ,class:"flex  space-x-2 justify-center items-end bg-maingray hover:bg-gray-600 text-white py-2 rounded-md transition duration-100" %>
+        </div>
+      <% end %>
+    </div>
+  </section>
+</div>
