--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,38 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+<div class="w-full min-h-screen flex px-10 bg-maingray">
+  <div class="hidden md:flex w-full h-full my-auto rounded-xl  overflow-hidden">
+    <img src="/photo/wechef-low-resolution-color-logo_1.png" alt="" class="w-full">
   </div>
+  <div class="flex flex-col md:flex-row w-full items-center">
+    <img src="/photo/wechef-low-resolution-color-logo_1.png" alt="" class="w-full md:hidden">
+    <div class="bg-white max-h-screen p-4 w-full md:w-2/3 mx-auto md:p-12 rounded-md">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= f.hidden_field :reset_password_token %>
+        <div>
+            <h1 class="text-2xl font-bold">變更您的密碼</h1>
+        </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <div class="mt-5">
+          <div class="flex">
+            <%= f.label :password, "新的密碼" ,class:"block text-md mb-2 pr-2"%>
+            <% if @minimum_password_length %>
+            <em>(請輸入最少<%= @minimum_password_length %>位數字)</em>
+            <% end %>
+          </div>
+
+          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange " ,placeholder:"請輸入新密碼" %>
+        </div>
+
+        <div class="my-3">
+          <%= f.label :password_confirmation, "再輸入一次密碼" ,class:"block text-md mb-2" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange " ,placeholder:"請再輸入一次密碼" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "確認送出", class:"mt-4 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500 " %>
+        </div>
+      <% end %>
+
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
