忘記密碼頁面和註冊頁面錯誤訊息整理

--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,12 +1,6 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
+  <div id="error_explanation" class="flex justify-center">
+    <ul class="text-center text-sm text-white py-2 bg-red-400 rounded-md w-1/2">
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
