--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,13 +7,13 @@
     <img src="/photo/wechef-low-resolution-color-logo_1.png" alt="" class="w-full md:hidden">
     <div class="bg-white max-h-screen p-4 w-full md:w-2/3 mx-auto md:p-12 rounded-md">
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-        <h1 class="text-2xl font-bold">忘記您的密碼了嗎？</h1>
+        <h1 class="text-2xl font-bold mb-4">忘記您的密碼了嗎？</h1>
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="mb-6">
 
           <div class="mt-5">
-            <%= f.label :email, class:"block text-md mb-2" %>
+            <%= f.label :"電子信箱", class:"block text-md mb-2" %>
             <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:"px-4 w-full border-2 py-2 rounded-md text-md outline-none focus:border-mainorange " ,placeholder:"請輸入電子信箱"%>
           </div>
           
