消費者頁面navbar調整

--- a/app/views/menus/order_food.html.erb
+++ b/app/views/menus/order_food.html.erb
@@ -1,3 +1,12 @@
+<header class="flex flex-shrink-0">
+  <div class="flex items-center w-full p-3 bg-maingray md:px-6">
+    <nav class="w-full  flex">
+      <div class="flex items-center m-auto w-48 h-7">
+        <img src="/photo/wechef-logo-nbg.png" class="mr-2" alt="WeChef Logo" style="aspect-ratio:auto">
+      </div>
+    </nav>
+  </div>
+</header>
 <!------------- banner ---------------->
 <div id="carouselExampleCaptions" class="relative carousel slide" data-bs-ride="carousel">
   <div class="box-border relative w-full overflow-hidden carousel-inner">
