--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <% if current_user && serial_number=nil %>
+    <% if current_user %>
       <%= render "shared/navbar" %>
     <% end %>
     <%= render 'shared/flash' %>
