--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,26 +1,48 @@
-<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center"><%= @menu.name %></h1>
-<section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-  <div class="h-3 bg-green-400 rounded-t-md"></div>
-  <div>
-    <div class="flex justify-evenly">
-      <div class="px-6 py-6 pt-6 text-xl font-bold capitalize text-block dark:text-block">餐點註記：<%= @menu.note %></div>
-      <div class="px-6 py-6 pt-6 text-xl font-bold capitalize text-block dark:text-block">單價：$<%= @menu.price %></div>
-    </div>
-    <div data-controller="update-quantity">
-      <%= form_with url: add_cart_path(@menu, {serial_number: params[:serial_number]}), method: :post do |f| %>
-        <div class="flex pb-3 justify-evenly">
-          <div class="flex">
-            <button data-action="click->update-quantity#decrement" class="px-2 bg-gray-300">-</button>
-            <%= f.text_field :quantity, class:"bg-white-100 border-2 text-center ", value: 1, min: 1, max: 10, data: {update_quantity_target: "quantity"} %>
-            <button data-action="click->update-quantity#increment" class="px-2 bg-gray-300">+</button>
+<header class="flex flex-shrink-0">
+  <div class="flex items-center w-full p-3 bg-maingray md:px-6">
+    <nav class="w-full  flex">
+      <div class="flex items-center m-auto w-48 h-7">
+        <img src="/photo/wechef-logo-nbg.png" class="mr-2" alt="WeChef Logo" style="aspect-ratio:auto">
+      </div>
+    </nav>
+  </div>
+</header>
+<div class="h-full">
+  <div class="text-center pt-2 md:pt-5">
+    <h1 class="text-3xl font-bold text-maingray pb-2"><%= @menu.name %></h1>
+  </div>
+  <div class="flex flex-col items-center w-full md:flex-row">
+    <div class="w-full h-full max-h-screen p-4 mx-auto bg-white rounded-md md:w-1/3 md:px-8">
+      <div class="mb-12">
+        <div class="bg-gray-300 rounded-md">
+          <div class="block text-md text-center font-bold text-maingray px-2 py-1 texe-center" >
+            餐點註記
           </div>
-          <div>
-            <button class="px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-            <%= f.submit "加入購物車", data: {action: "click->update-quantity#addOne",  update_quantity_target: "link"}%>
-            </button>
+          <div class="pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 bg-white text-center">
+            <%= @menu.note %>
           </div>
         </div>
-      <% end %>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="block text-md text-center font-bold text-maingray px-2 py-1">
+            單價
+          </div>
+          <div class="px-4 w-full bg-white border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 text-center">
+            $<%= @menu.price %>
+          </div>
+        </div>
+        <%= form_with url: add_cart_path(@menu, {serial_number: params[:serial_number]}), method: :post do |f| %>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="py-2 flex justify-center" data-controller="update-quantity">
+            <button data-action="click->update-quantity#decrement" class="px-2 mx-2 bg-gray-100">-</button>
+            <%= f.text_field :quantity, class:"bg-white-100 border-2 text-center ", value: 1, min: 1, max: 10, data: {update_quantity_target: "quantity"} %>
+            <button data-action="click->update-quantity#increment" class="px-2 mx-2 bg-gray-100">+</button>
+          </div>
+        </div>
+        <div>
+          <%= f.submit "加入購物車",class:"mt-4 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500 ", data: {action: "click->update-quantity#addOne",  update_quantity_target: "link"}%>
+        </div>
+        <% end %>
+      </div>
     </div>
   </div>
-</section>
+</div>
