--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,44 +1,63 @@
-<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">購物車</h1>
-<section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-<div class="h-3 bg-green-400 rounded-t-md"></div>
-  <div class="flex justify-evenly ">
-    <div class="px-6 py-6 pt-6 text-xl font-bold capitalize text-block dark:text-block">桌位：<%=@desk.name%></div>
-    <div class="px-6 py-6 pt-6 text-xl font-bold capitalize text-block dark:text-block">訂購人：<%= @nickname %></div>
+<div class="h-full">
+  <div class="text-center pt-2 md:pt-5">
+    <h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">購物車</h1>
   </div>
-  <hr class="w-3/4 h-1 mx-auto bg-green-400 bg-opacity-50">
-  <div>
-    <table class="w-3/4 mx-auto table-auto">
-      <thead class="font-medium leading-8 text-center text-blue-600">
-        <tr>
-          <td >商品名稱</td>
-          <td >數量</td>
-          <td >單價</td>
-          <td >小計</td>
-        </tr>
-      </thead>
-      <tbody class="leading-10 text-center ">
-        <% current_cart.items.each do |item| %>
-        <tr>
-          <td><%= item.menu.name %></td>
-          <td><%= item.quantity %></td>
-          <td><%= item.menu.price %></td>
-          <td><%= item.price %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+  <div class="flex flex-col items-center w-full md:flex-row">
+    <div class="w-full h-full max-h-screen p-4 mx-auto bg-white rounded-md md:w-1/3 md:px-8">
+      <div class="mb-12">
+        <div class="bg-gray-300 rounded-md">
+          <div class="block text-md font-bold text-maingray py-1 text-center" >
+            桌位
+          </div>
+          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange bg-white  text-center">
+            <%=@desk.name%>
+          </div>
+        </div>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="block text-md font-bold text-maingray text-center px-2 py-1">
+            訂購人
+          </div>
+          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange bg-white  text-center">
+            <%= @nickname %>
+          </div>
+        </div>
+        <hr class="w-full bg-black h-1">
+        <div class="my-3 py-2 px-2 bg-gray-300 rounded-md">
+          <table class="w-full mx-auto table-auto bg-white">
+            <thead class="font-medium leading-8 text-center text-blue-600">
+              <tr>
+                <td >商品名稱</td>
+                <td >數量</td>
+                <td >單價</td>
+                <td >小計</td>
+              </tr>
+            </thead>
+            <tbody class="leading-10 text-center ">
+              <% current_cart.items.each do |item| %>
+              <tr>
+                <td><%= item.menu.name %></td>
+                <td><%= item.quantity %></td>
+                <td><%= item.menu.price %></td>
+                <td><%= item.price %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+        <hr class="w-full bg-black h-1">
+        <div class="flex justify-end mt-6">
+          <div class="mt-4 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200 text-center">
+            <%= link_to "繼續選購", "/foods?serial_number=#{params[:serial_number]}" %>
+          </div>
+          <div class="mt-4 mb-3 w-full bg-pink-500 text-white mr-2 py-2 rounded-md transition duration-100 hover:bg-pink-700 text-center">
+            <%= link_to '清空購物車', cart_path({serial_number: params[:serial_number]}), method: :delete, data: {confirm: "確定清空購物車？"} %>
+          </div>
+          <div class="mt-4 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500 text-center">
+            <%= link_to "結帳", orders_path({desk_id: @desk.id, items: @items}), method: "post" %>
+            $<%= current_cart.total_price %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <hr class="w-3/4 h-1 mx-auto bg-green-400 bg-opacity-50">
-  <div class="flex justify-around py-6 pt-6">
-    <button class="px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-      <%= link_to "繼續選購", "/foods?serial_number=#{params[:serial_number]}" %>
-    </button >
-    <button class="px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-      <%= link_to '清空購物車', cart_path({serial_number: params[:serial_number]}), method: :delete, data: {confirm: "確定清空購物車？"} %>
-    </button>
-    <button class="px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-      <%= link_to "結帳", orders_path({desk_id: @desk.id, items: @items}), method: "post" %>
-      $<%= current_cart.total_price %>
-    </button>
-  </div>
-</section>
+</div>
