新增菜單備註限字數

--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="my-3 rounded-md">
-          <%= f.label :note ,"備註" , class:"block bg-gray-300 rounded-t-md text-md font-bold text-maingray px-2 py-1"%>
+          <%= f.label :note ,"備註(限字數150字)" , class:"block bg-gray-300 rounded-t-md text-md font-bold text-maingray px-2 py-1"%>
           <%= f.text_area :note ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 rounded-b-lg text-md outline-none focus:border-mainorange text-center", placeholder:"請輸入備註" %>
         </div>
         <div class="flex justify-end mt-6">
