--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
             <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange " ,placeholder:"請輸入密碼" %>
           </div>
           <div class="my-3">
-            <%= f.label :"在輸入一次密碼" ,class:"block text-md mb-2"%>
+            <%= f.label :"再輸入一次密碼" ,class:"block text-md mb-2"%>
             <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "new-password", class:"px-4 w-full border-2 py-2 rounded-md text-sm outline-none focus:border-mainorange ",placeholder:"請再輸入一次密碼"%>
           </div>
         </div>
