--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -15,12 +15,12 @@
         <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
             text-md">
           <span>營業時間（起）： </span>
-          <span><%= @store.business_start %></span>
+          <span><%= @store.time_start %></span>
         </div>
         <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
             text-md">
           <span>營業時間（迄）： </span>
-          <span><%= @store.business_end %></span>
+          <span><%= @store.time_end %></span>
         </div>
         <div class="mb-2">
           <button type="button"
