--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -15,17 +15,16 @@
         <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
             text-md">
           <span>營業時間（起）： </span>
-          <span><%= @store.business_start %></span>
+          <span><%= @store.time_start %></span>
         </div>
         <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
             text-md">
           <span>營業時間（迄）： </span>
-          <span><%= @store.business_end %></span>
+          <span><%= @store.time_end %></span>
         </div>
-        <div class="mb-2">
-          <button type="button"
-            class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700"
-            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
+        <div class="mb-2" data-controller="dropdown">
+          <button type="button" data-action="click->dropdown#siderbarbtn" data-dropdown-target="btn"
+            class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700">
             <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>頁面連結</span>
             <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg">
