--- a/app/views/menus/order_food.html.erb
+++ b/app/views/menus/order_food.html.erb
@@ -1,3 +1,4 @@
+<% if not current_user  %>
 <header class="flex flex-shrink-0">
   <div class="flex items-center w-full p-3 bg-maingray md:px-6">
     <nav class="w-full  flex">
@@ -7,6 +8,7 @@
     </nav>
   </div>
 </header>
+<% end  %>
 <!------------- banner ---------------->
 <div id="carouselExampleCaptions" class="relative carousel slide" data-bs-ride="carousel">
   <div class="box-border relative w-full overflow-hidden carousel-inner">
