store_show sidebar修改

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -34,7 +34,7 @@
               </path>
             </svg>
           </button>
-          <ul id="dropdown-example-1" class="hidden py-2 space-y-2">
+          <ul id="dropdown-example-1" data-dropdown-target="dropdown-btn" class="hidden py-2 space-y-2">
             <li>
               <div class="flex items-center">
                 <%= link_to "菜單管理" ,store_menus_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal
