--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -22,10 +22,9 @@
           <span>營業時間（迄）： </span>
           <span><%= @store.time_end %></span>
         </div>
-        <div class="mb-2">
-          <button type="button"
-            class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700"
-            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
+        <div class="mb-2" data-controller="dropdown">
+          <button type="button"       data-action="click->dropdown#siderbarbtn" data-dropdown-target="btn"
+            class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700">
             <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>頁面連結</span>
             <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg">
@@ -35,7 +34,7 @@
               </path>
             </svg>
           </button>
-          <ul id="dropdown-example-1" class="hidden py-2 space-y-2">
+          <ul id="dropdown-example-1" class="hidden py-2 space-y-2" data-dropdown-target="dropdown-btn">
             <li>
               <div class="flex items-center">
                 <%= link_to "菜單管理" ,store_menus_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal
@@ -59,10 +58,10 @@
             </li>
           </ul>
         </div>
-        <div class="mb-1">
+        <div class="mb-1" data-controller="dropdown">
           <button type="button"
-            class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700"
-            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-2">
+            data-action="click->dropdown#siderbarbtn" data-dropdown-target="btn"
+            class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700">
             <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>主要功能</span>
             <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg">
@@ -72,7 +71,7 @@
               </path>
             </svg>
           </button>
-          <ul id="dropdown-example-2" class="hidden py-2 space-y-2">
+          <ul id="dropdown-example-2" class="hidden py-2 space-y-2" data-dropdown-target="dropdown-btn">
             <li>
               <div class="flex">
                 <%= link_to "新增菜單" , new_store_menu_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal
