--- a/app/views/response/index.html.erb
+++ b/app/views/response/index.html.erb
@@ -1,26 +1,31 @@
-<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">交易結果</h1>
-<section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-  <div class="h-3 bg-green-400 rounded-t-md"></div>
-  <div>
-    <table class="w-3/4 mx-auto table-auto">
-      <thead class="font-medium leading-8 text-center text-blue-600">
-        <tr>
-          <td>訂單編號</td>
-          <td>商品名稱</td>
-          <td>交易結果</td>
-          <td>交易金額</td>
-          <td>付款時間</td>
-        </tr>
-      </thead>
-      <tbody class="leading-10 text-center">
-        <tr>
-          <td><%= @order_no %></td>
-          <td><%= @response_hash["ItemDesc"] %></td>
-          <td>交易成功(<%= @status %>)</td>
-          <td><%= @response_hash["Amt"] %></td>
-          <td><%= @response_hash["PayTime"] %></td>
-        </tr>
-      </tbody>
-    </table>
+<div class="h-full">
+  <div class="text-center pt-2 md:pt-5">
+    <h1 class="text-3xl font-bold text-maingray pb-2">您的餐點準備中...</h1>
   </div>
-</section>
+  <div class="flex flex-col items-center w-full md:flex-row">
+    <div class="w-full h-full max-h-screen p-4 mx-auto bg-white rounded-md md:w-1/3 md:px-8">
+      <div class="mb-12">
+        <div class="bg-gray-300 rounded-md">
+          <div class="block text-md font-bold text-maingray px-2 py-1 texe-center">交易結果</div>
+          <div class="pl-4 md:pl-1 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center " >交易成功(<%= @status %>)</div>
+        </div>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="block text-md font-bold text-maingray px-2 py-1">訂單編號</div>
+          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @order_no %></div>
+        </div>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="block text-md font-bold text-maingray px-2 py-1">商品名稱</div>
+          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @response_hash["ItemDesc"] %>的餐點</div>
+        </div>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="block text-md font-bold text-maingray px-2 py-1">交易金額</div>
+          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center">$<%= @response_hash["Amt"] %></div>
+        </div>
+        <div class="my-3 bg-gray-300 rounded-md">
+          <div class="block text-md font-bold text-maingray px-2 py-1">付款時間</div>
+          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @response_hash["PayTime"] %></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
