--- a/app/views/response/index.html.erb
+++ b/app/views/response/index.html.erb
@@ -6,24 +6,24 @@
     <div class="w-full h-full max-h-screen p-4 mx-auto bg-white rounded-md md:w-1/3 md:px-8">
       <div class="mb-12">
         <div class="bg-gray-300 rounded-md">
-          <div class="block text-md font-bold text-maingray px-2 py-1 texe-center">交易結果</div>
-          <div class="pl-4 md:pl-1 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center " >交易成功(<%= @status %>)</div>
+          <div class="block text-center text-md font-bold text-maingray px-2 py-1 texe-center">交易結果</div>
+          <div class="pl-4 bg-white md:pl-1 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center " >交易成功(<%= @status %>)</div>
         </div>
         <div class="my-3 bg-gray-300 rounded-md">
-          <div class="block text-md font-bold text-maingray px-2 py-1">訂單編號</div>
-          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @order_no %></div>
+          <div class="block text-center text-md font-bold text-maingray px-2 py-1">訂單編號</div>
+          <div class="px-4 bg-white w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @order_no %></div>
         </div>
         <div class="my-3 bg-gray-300 rounded-md">
-          <div class="block text-md font-bold text-maingray px-2 py-1">商品名稱</div>
-          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @response_hash["ItemDesc"] %>的餐點</div>
+          <div class="block text-center text-md font-bold text-maingray px-2 py-1">商品名稱</div>
+          <div class="px-4 bg-white w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @response_hash["ItemDesc"] %>的餐點</div>
         </div>
         <div class="my-3 bg-gray-300 rounded-md">
-          <div class="block text-md font-bold text-maingray px-2 py-1">交易金額</div>
-          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center">$<%= @response_hash["Amt"] %></div>
+          <div class="block text-center text-md font-bold text-maingray px-2 py-1">交易金額</div>
+          <div class="px-4 bg-white w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center">$<%= @response_hash["Amt"] %></div>
         </div>
         <div class="my-3 bg-gray-300 rounded-md">
-          <div class="block text-md font-bold text-maingray px-2 py-1">付款時間</div>
-          <div class="px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @response_hash["PayTime"] %></div>
+          <div class="block text-center text-md font-bold text-maingray px-2 py-1">付款時間</div>
+          <div class="px-4 bg-white w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center"><%= @response_hash["PayTime"] %></div>
         </div>
       </div>
     </div>
