--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -104,9 +104,9 @@
         </div>
       </nav>
     </div>
-    <main class="grid items-center w-full grid-cols-1  gap-1 p-3 text-sm bg-gray-200 lg:p-5 xl:text-lg md:grid-cols-4 md:grid-rows-6 lg:grid-cols-6 lg:grid-rows-8 md:gap-3">
+    <main class="grid items-center w-full grid-cols-1  gap-1 p-3 text-sm bg-gray-200 lg:p-5 xl:text-lg md:grid-cols-4 md:grid-rows-6 lg:grid-cols-8  md:gap-3">
       <% @desks.each do |desk| %>
-        <section class="box-border p-4 mt-auto text-center bg-red-100 md:rounded-lg hover:bg-red-200 hover:scale-110" data-controller="update-order" data-update-order-desk-id-value="<%= desk.id %>">
+        <section class="box-border h-full p-4 mt-auto text-center bg-red-100 md:rounded-lg hover:bg-red-200 hover:scale-110" data-controller="update-order" data-update-order-desk-id-value="<%= desk.id %>">
           <div>桌位：<%= desk.name %></div>
           <span class="bg-green-100" >
             <%= link_to "編輯" , edit_store_desk_path(@store, desk.id) %>
