--- a/app/views/stores/_order.html.erb
+++ b/app/views/stores/_order.html.erb
@@ -1,5 +1,5 @@
 <li data-controller="display">
-  <div  class="bg-white border-2 border-black"> 
+  <div  class="bg-white border-2 border-gray-300 rounded-md"> 
     <div>訂單編號：<%= order.id %></div>
       <ul>
         <% order.items.each do |item| %>
